--- a/public/static/styles/styles.css
+++ b/public/static/styles/styles.css
@@ -25,8 +25,14 @@ body {
   bottom: 100px;
   right: 100px;
 }
+
 .bucket {
   width: 100px;
   height: 100px;
   background: #d0793b;
+}
+
+.splatt {
+  z-index: 100;
+  position: relative;
 }
