--- a/public/static/styles/styles.css
+++ b/public/static/styles/styles.css
@@ -6,33 +6,33 @@ body {
   position: absolute;
   top: 0px;
   left: 0px;
-  width: 400px;
-  height: 500px;
-  background: #00ff00;
+  width: 517px;
+  height: 435px;
 }
 
 .controls {
+  z-index: 2000;
   position: absolute;
   left: 0px;
   bottom: 0px;
   width: 100%;
-  height: 200px;
-  border-top: 3px solid #fff;
+  height: 50px;
+  border-top: 3px solid #333340;
+  background: 282731;
 }
 
 .bucket-container {
   position: absolute;
-  bottom: 100px;
-  right: 100px;
+  bottom: 0px;
 }
 
 .bucket {
   width: 100px;
-  height: 100px;
-  background: #d0793b;
+  height: 50px;
+  background: #1e1e25;
 }
 
 .splatt {
   z-index: 100;
-  position: relative;
+  position: absolute;
 }
